[gd_scene load_steps=23 format=3 uid="uid://ciav30gy7r4ut"]

[ext_resource type="Script" path="res://Scripts/Characters/Villains/NightBorne.gd" id="1_3ijrl"]
[ext_resource type="Texture2D" uid="uid://evajpb1amtev" path="res://Assets/Characters/Villains/NightBorne.png" id="2_vyp8r"]
[ext_resource type="Texture2D" uid="uid://ckd1mtuus8hmb" path="res://Assets/Items/Props/healthbarProgress.png" id="3_git01"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5dwgj"]
radius = 19.5
height = 39.0

[sub_resource type="Animation" id="Animation_6g1bw"]
resource_name = "Attack"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_ryj77"]
resource_name = "Death"
length = 2.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114]
}

[sub_resource type="Animation" id="Animation_kg34n"]
resource_name = "Die"
length = 2.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114]
}

[sub_resource type="Animation" id="Animation_megcn"]
resource_name = "Idle"
length = 0.37
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_5nlfm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [92]
}

[sub_resource type="Animation" id="Animation_a02sg"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ibi1"]
_data = {
"Attack": SubResource("Animation_6g1bw"),
"Death": SubResource("Animation_ryj77"),
"Die": SubResource("Animation_kg34n"),
"Idle": SubResource("Animation_megcn"),
"RESET": SubResource("Animation_5nlfm"),
"Walk": SubResource("Animation_a02sg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tb6w0"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t7x4y"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7bo5u"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mmpci"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vaco1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4lgi3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7mme0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vkxc3"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qsoqb"]
states/Attack/node = SubResource("AnimationNodeAnimation_tb6w0")
states/Attack/position = Vector2(672.125, 226.395)
states/Death/node = SubResource("AnimationNodeAnimation_t7x4y")
states/Death/position = Vector2(671, 350.895)
states/Idle/node = SubResource("AnimationNodeAnimation_7bo5u")
states/Idle/position = Vector2(394.25, 99.1975)
states/Walk/node = SubResource("AnimationNodeAnimation_mmpci")
states/Walk/position = Vector2(673.25, 99.895)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_vaco1"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_4lgi3"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_7mme0"), "Attack", "Death", SubResource("AnimationNodeStateMachineTransition_vkxc3")]
graph_offset = Vector2(34.5, 200.338)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vnit5"]
radius = 17.5
height = 157.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l04h6"]
radius = 25.0
height = 62.6667

[node name="NightBorne" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(3, 3)
collision_layer = 8
collision_mask = 11
script = ExtResource("1_3ijrl")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_vyp8r")
hframes = 23
vframes = 5
frame = 92

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 10.5)
shape = SubResource("CapsuleShape2D_5dwgj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ibi1")
}
autoplay = "Idle"
speed_scale = 1.3

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_qsoqb")
anim_player = NodePath("../AnimationPlayer")

[node name="NightBorneLife" type="TextureProgressBar" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = -6.0
scale = Vector2(0.6, 0.6)
max_value = 500.0
value = 500.0
texture_progress = ExtResource("3_git01")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1.5, 11)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vnit5")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(1.33333, 10.6667)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_l04h6")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
